--- a/styles.css
+++ b/styles.css
@@ -148,6 +148,7 @@ display: inline-block;
 
 .professional{
 width: 25%;
+height:100%;
 float: left;
 margin-right: 30px;
 padding-top: 65px;
@@ -156,6 +157,7 @@ padding-top: 65px;
 
 .hobbies{
 width: 25%;
+height:100%;
 float: right;
 margin-left: 30px;
 padding-top: 65px;
